fixed osme spelling errors

--- a/templates/showSearches.ejs
+++ b/templates/showSearches.ejs
@@ -19,7 +19,7 @@
         <p>Looking at how often each topic gets searched highlight what 
             people are actually curious, confused, or concerned about. If one topic (like ADHD
             or chronic illness) keeps getting searched more than others, that tells us that
-            it's an important area where poeple want acessible information and support.
+            it's an important area where people want accessible information and support.
         </p>
 
         <p>It also shows patterns in what people look for over time. Seeing the most recent searched gives 
